# SSM_Lab3

./: CMakeLists.txt  CauchyDistributionModel.cpp  CauchyDistributionModel.h  HelperFunctions.cpp  LogNormalDistributionModel.cpp  LogNormalDistributionModel.h  NormalDistributionModel.cpp  NormalDistributionModel.h  main.cpp
tex/: Lab3.tex
